@@ -18,6 +18,9 @@ Fixed: If the SSL test connection failed and certificate validity test was activ
 monit returned confusing certificate validity error. The test is now skipped in such
 case as it can be performed only if the certificate can be read.
 
+Fixed: The certificate validity test and checksum test didn't work for self-signed
+certificates if such certificates were allowed.
+
 
 Version 5.21.0
 
